Changes
=======

3.5.0 (unreleased)
------------------

- Remove zope.testing from dependencies, as it's not really needed.
- Define IIndexSort interface for indexes that support sorting and
  implement it in the FieldIndex.

3.4.1 (2007-09-28)
------------------

- Fixed bug in package metadata (wrong homepage URL).

3.4.0 (2007-09-28)
------------------

No further changes since 3.4.0a1.

3.4.0a1 (2007-04-22)
--------------------

Initial release as a separate project, corresponds to zope.index from
Zope 3.4.0a1